...

    private var materialTabs: [MaterialBottomNavigation.MaterialBottomNavTab] {
        [
            MaterialBottomNavigation.MaterialBottomNavTab(
                icon: MaterialIcon.home,
                activeIcon: "house.fill",
                label: "Map"
            ),
            MaterialBottomNavigation.MaterialBottomNavTab(
                icon: MaterialIcon.nightclub,
                activeIcon: "wineglass.fill",
                label: "Top Clubs"
            ),
            MaterialBottomNavigation.MaterialBottomNavTab(
                icon: MaterialIcon.crew,
                activeIcon: "person.3.fill",
                label: "Crew"
            ),
...
